# zerotel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sample_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
docker/: docker-compose.yml  otel-collector.yml  prometheus.yml  tempo.yml
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docs/: index.md
example/: Dockerfile  main.py
examples/: 01_minimal.py  02_full_config.py  03_trace_decorator.py  04_flask.py
src/zerotel/: __init__.py  _cli.py  _config.py  _context.py  _decorators.py  _logging.py  _metrics.py  _middleware.py
src/zerotel/integrations/: __init__.py  fastapi.py  flask.py  sqlalchemy.py
tests/: conftest.py  test_config.py  test_context.py  test_decorators.py  test_logging.py  test_metrics.py  test_middleware.py
tests/integrations/: test_fastapi.py
